--- a/photos/templates/main.html
+++ b/photos/templates/main.html
@@ -1,11 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h>main html</h>
-</body>
-</html>
+{%extends 'base.html' %}
+{% block content %}
+{{block.super }}
+{% endblock %}
