--- a/photos/templates/main.html
+++ b/photos/templates/main.html
@@ -1,4 +1,16 @@
 {%extends 'base.html' %}
 {% block content %}
 {{block.super }}
+
+    <div class="container">
+        <!-- looping through images -->
+        {% for image in images %}
+        <div class="row">
+            <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+                <h2 class="text-center"> {{ images.image_name }} </h2>
+                <h2 class="text-center"> {{ images.image_description }} </h6>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
 {% endblock %}
