--- a/photos/templates/main.html
+++ b/photos/templates/main.html
@@ -6,9 +6,12 @@
         <!-- looping through images -->
         {% for images_item in images %}
         <div class="row">
-            <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+            <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
                 <h2 class="text-center"> {{ images_item.image_name }} </h2>
                 <h2 class="text-center"> {{ images_item.image_descrption }} </h6>
+            </div>
+            <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+                <img src="{{images_item.image_pics.url}}" class="img-responsive" alt="Image">
             </div>
         </div>
         {% endfor %}
