--- a/photos/templates/base.html
+++ b/photos/templates/base.html
@@ -1,4 +1,5 @@
 {% load bootstrap4 %}
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,6 +12,7 @@
 	{% endif %}
 	{% block styles %}
 		{% bootstrap_css %}
+		<link rel="stylesheet" href="{% static 'css/base.css' %}">
 	{% endblock %}
 
 </head>
