--- a/photos/templates/main.html
+++ b/photos/templates/main.html
@@ -13,6 +13,9 @@
             <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
                 <img src="{{images_item.image_pics.url}}" class="img-responsive" alt="Image">
             </div>
+            <div>
+                <button></button>
+            </div>
         </div>
         {% endfor %}
     </div>
