--- a/photos/templates/single_image.html
+++ b/photos/templates/single_image.html
@@ -1,9 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class ="container">
-    {% for image_item in image %}
-    <h1>{{ image_item.image_name}}</h1>
-    {% endfo%}
+    <h1>{{ images.image_name }}</h1>
+    <h5>{{ images.image_descrption}}</h5>
 
 </div>
 {% endblock %}
