--- a/photos/templates/main.html
+++ b/photos/templates/main.html
@@ -4,19 +4,18 @@
 
     <div class="container">
         <!-- looping through images -->
-        {% for images_item in images %}
         <div class="row">
-            <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-                <h2 class="text-center"> {{ images_item.image_name }} </h2>
-                <h2 class="text-center"> {{ images_item.image_descrption }} </h6>
+            {% for images_item in images %}
+            <div class="col-md-4">
+                <span>
+                    {{ images_item.image_name }}
+                    {{ images_item.image_descrption }}
+                    <img src="{{images_item.image_pics.url}}" class="img-responsive" alt="Image">
+                    <a href='{% url "single_image" images_item.id %}'><h5>view</h5></a>
+                </span>
             </div>
-            <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-                <img src="{{images_item.image_pics.url}}" class="img-responsive" alt="Image">
-            </div>
-            <div>
-                <a href='{% url "single_image" images_item.id %}'><h5>view</h5></a>
-            </div>
+            {% endfor %}
         </div>
-        {% endfor %}
+        
     </div>
 {% endblock %}
