--- a/photos/templates/navbar.html
+++ b/photos/templates/navbar.html
@@ -17,7 +17,7 @@
               <div class="input-group">
                 <input type="text" class="form-control" placeholder="Search Category" name="image">
                 <div class="input-group-btn">
-                  <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                  <button class="btn btn-info btn-md my-2 my-sm-0" type="submit">Search</button>
                 </div>
               </div>
             </form>
