--- a/photos/templates/main.html
+++ b/photos/templates/main.html
@@ -5,19 +5,68 @@
         <div class="card-deck">
             {% for images_item in images %}
                 <div class="card">
-                    <img src="{{ images_item.image_pics.url}}" class="card-img-top" alt="image">
+                    <div class="withBlurredBg">
+                        <a class="card-text" href='{% url "single_image" images_item.id %}'><img  src="{{ images_item.image_pics.url}}" class="card-img-top " alt="image"></a>
+                        <4>Click to View</4>
+                    </div>
                     <div class="card-body">
                         <h5 class="card-title">{{images_item.image_name}}</h5>
-                        <a class="card-text" href='{% url "single_image" images_item.id %}'><p class="card-text">views</p></a>
-                        <a class="card-text" href='{% url "single_image" images_item.id %}'><p class="card-text">Details</p></a>
-                    </div>
+                        <!-- Button trigger modal -->
+                        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalLong">
+                            Details
+                        </button>
+                        
+                        <!-- Modal -->
+                        <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+                            <div class="modal-dialog" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalLongTitle">-Name: {{images_item.image_name}} -category: {{images_item.category}} -Location: {{images_item.location}}</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                                </div>
+                                <div class="modal-body">
+                                    {{images_item.image_descrption}}
+                                </div>
+                                <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Exit</button>
+                                <button type="button" class="btn btn-primary">Copy</button>
+                                </div>
+                            </div>
+                            </div>
+                        </div>
+                                            </div>
                     <div class="card-footer">
                         <small class="text-muted">{{images_item.pub_date}}</small>
                     </div>
                 </div>
+                    <!-- Modal -->
+                <div class="modal fade" id="{{images_item.id}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalLongTitle">{{ images_item.image_name }}</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                <P>{{images_item.image_description}}</P>
+                                <span class="btn btn-sm btn-outline-success">{{images.category}}</span>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Exit</button>
+                                <button type="button" class="btn btn-primary">Copy</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
             {% endfor %}
         </div>
 
     </diV>
+
 
 {% endblock %}
