--- a/photos/templates/main.html
+++ b/photos/templates/main.html
@@ -2,6 +2,10 @@
 {% block content %}
 {{block.super }}    
     <diV class="container">
+        <div class="row">
+            <div class="col-md-5">
+            </div>
+        </div>
         <div class="card-deck">
             {% for images_item in images %}
                 <div class="card">
