--- a/photos/templates/base.html
+++ b/photos/templates/base.html
@@ -19,7 +19,21 @@
 <body>
 	{% include 'navbar.html' %}
 	
-	{% block content %} <h1 class='text-center'>Test base</h1> {%endblock%}
+	{% block content %}
+	<div class="container">
+		<div class="row">
+			{% for location in locations %}
+		<div class="col-md-1">
+		<span id="locations">
+				<a class="btn btn-outline-info btn-sm" id="btn" href ='{% url "locations" location.id %}'>{{location.location_name}}</a>
+			
+		 </span>
+		 	
+		</div>
+		{%endfor%}
+	</div>
+	</div>
+	{%endblock%}
 
 	{% block scripts %}
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
