--- a/photos/templates/location.html
+++ b/photos/templates/location.html
@@ -1,8 +1,10 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class="container">
-    {% for image in images %}
-        <div></div>
+    {% for images_item in images %}
+        <div>
+            {{images_item.image_name}}
+        </div>
     {% endfor %}
 </div>
 {% endblock %}
