--- a/photos/templates/main.html
+++ b/photos/templates/main.html
@@ -6,8 +6,10 @@
             <div class="col-md-5">
             </div>
         </div>
-        <div class="card-deck">
+        <div class= "row">
             {% for images_item in images %}
+            <div class="col-md-4">
+                
                 <div class="card">
                     <div class="withBlurredBg">
                         <a class="card-text" href='{% url "single_image" images_item.id %}'><img  src="{{ images_item.image_pics.url}}" class="card-img-top " alt="image"></a>
@@ -34,8 +36,10 @@
                                     {{images_item.image_descrption}}
                                 </div>
                                 <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Exit</button>
-                                <button type="button" class="btn btn-primary">Copy</button>
+                                    <input class="form-control input-lg" type="text"
+                                        value="{{images_item.image_pics.url}}" id="{{images_item.id}}.url">
+                                <button class="btn btn-success btn-sm" onclick="copyLink('{{images_item.id}}.url')">Copy</button>
+                                <button type="button" class="btn btn-secondary btn-sm" data-dismiss="modal">Exit</button>
                                 </div>
                             </div>
                             </div>
@@ -45,29 +49,12 @@
                         <small class="text-muted">{{images_item.pub_date}}</small>
                     </div>
                 </div>
-                    <!-- Modal -->
-                <div class="modal fade" id="{{images_item.id}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
-                    <div class="modal-dialog" role="document">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h5 class="modal-title" id="exampleModalLongTitle">{{ images_item.image_name }}</h5>
-                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                    <span aria-hidden="true">&times;</span>
-                                </button>
-                            </div>
-                            <div class="modal-body">
-                                <P>{{images_item.image_description}}</P>
-                                <span class="btn btn-sm btn-outline-success">{{images.category}}</span>
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Exit</button>
-                                <button type="button" class="btn btn-primary">Copy</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
+            </div>
             {% endfor %}
+
+        </div>
+        <div class="card-deck">
+
         </div>
 
     </diV>
