adding or aws service

--- a/photos/templates/location.html
+++ b/photos/templates/location.html
@@ -2,6 +2,7 @@
 {% block content %}
 {{block.super }}    
     <diV class="container">
+        <a class="navbar-brand" href="{% url 'main' %}"><h6>Back</h6></a>
         <div class="row">
             <div class="col-md-5">
             </div>
