--- a/photos/templates/main.html
+++ b/photos/templates/main.html
@@ -12,8 +12,8 @@
                 
                 <div class="card">
                     <div class="withBlurredBg">
-                        <a class="card-text" href='{% url "single_image" images_item.id %}'><img  src="{{ images_item.image_pics.url}}" class="card-img-top " alt="image"></a>
-                        <4>Click to View</4>
+                            <a class="card-text" href='{% url "single_image" images_item.id %}'><img  src="{{ images_item.image_pics.url}}" class="card-img-top " alt="image"></a>
+                        <p>Click to View</p>
                     </div>
                     <div class="card-body">
                         <h5 class="card-title">{{images_item.image_name}}</h5>
